--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Calculator</string>
+    <string name="name">Name</string>
+    <string name="settings">Settings</string>
+    <string name="theme">Theme</string>
+    <string name="oled_theme_variant">OLED theme variant</string>
+    <string name="oled_theme_variant_desc">As dark as it gets</string>
 </resources>
